{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 38,
  "lineage": "12727eca-73f2-3127-3128-427a8d08ab86",
  "resources": [
    {
      "module": "module.infra-ap-south-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0808a9e5c43895e49",
            "arn": "arn:aws:ec2:ap-south-1:637423489864:instance/i-081827bebe9a0766e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081827bebe9a0766e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02dfc23ab5e966521",
            "private_dns": "ip-10-0-0-41.ap-south-1.compute.internal",
            "private_ip": "10.0.0.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00833b84d90ed8a62",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05250d95ca933a8ab",
            "tags": {
              "Name": "private_sub_ec2"
            },
            "tags_all": {
              "Name": "private_sub_ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-034b58e177523263a"
            ]
          },
          "dependencies": [
            "module.infra-ap-south-1.aws_subnet.private-subnet",
            "module.infra-ap-south-1.aws_vpc.main",
            "module.infra-ap-south-1.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.infra-ap-south-1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423489864:internet-gateway/igw-0334b959f608c8ed4",
            "id": "igw-0334b959f608c8ed4",
            "owner_id": "637423489864",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-01845e9fc2cf9cc70"
          },
          "dependencies": [
            "module.infra-ap-south-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-ap-south-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423489864:route-table/rtb-03a623a9b1b4da7b8",
            "id": "rtb-03a623a9b1b4da7b8",
            "owner_id": "637423489864",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0334b959f608c8ed4",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0334b959f608c8ed4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-01845e9fc2cf9cc70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra-ap-south-1.aws_internet_gateway.gw",
            "module.infra-ap-south-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-ap-south-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5f75e7b5eb4ad60",
            "route_table_id": "rtb-03a623a9b1b4da7b8",
            "subnet_id": "subnet-0b74321aac3af4c80"
          },
          "dependencies": [
            "module.infra-ap-south-1.aws_internet_gateway.gw",
            "module.infra-ap-south-1.aws_route_table.route_table",
            "module.infra-ap-south-1.aws_subnet.public-subnet",
            "module.infra-ap-south-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-ap-south-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423489864:subnet/subnet-05250d95ca933a8ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05250d95ca933a8ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423489864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-01845e9fc2cf9cc70"
          },
          "dependencies": [
            "module.infra-ap-south-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-ap-south-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423489864:subnet/subnet-0b74321aac3af4c80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b74321aac3af4c80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423489864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-01845e9fc2cf9cc70"
          },
          "dependencies": [
            "module.infra-ap-south-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-ap-south-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:637423489864:vpc/vpc-01845e9fc2cf9cc70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eed6067627ac9f4d",
            "default_route_table_id": "rtb-010d0fec9059a8531",
            "default_security_group_id": "sg-034b58e177523263a",
            "dhcp_options_id": "dopt-02899d25826e6133b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01845e9fc2cf9cc70",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010d0fec9059a8531",
            "owner_id": "637423489864",
            "tags": {
              "Name": "tera-vpc"
            },
            "tags_all": {
              "Name": "tera-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.infra-us-east-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07543813a68cc4fe9",
            "arn": "arn:aws:ec2:us-east-1:637423489864:instance/i-0150fdde0306d196c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0150fdde0306d196c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a900bb6f7230bd4b",
            "private_dns": "ip-10-0-0-85.ec2.internal",
            "private_ip": "10.0.0.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a1d11c28d11a0da0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d2e08d25d84b9fde",
            "tags": {
              "Name": "private_sub_ec2"
            },
            "tags_all": {
              "Name": "private_sub_ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f361e93e07b4acda"
            ]
          },
          "dependencies": [
            "module.infra-us-east-1.aws_subnet.private-subnet",
            "module.infra-us-east-1.aws_vpc.main",
            "module.infra-us-east-1.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.infra-us-east-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07543813a68cc4fe9",
            "arn": "arn:aws:ec2:us-east-1:637423489864:instance/i-0860e6891e2204de1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0860e6891e2204de1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c0bc020dcd5b0057",
            "private_dns": "ip-10-0-1-21.ec2.internal",
            "private_ip": "10.0.1.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec5532628a91c625",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092b46c3f22182ae0",
            "tags": {
              "Name": "public_sub_ec2"
            },
            "tags_all": {
              "Name": "public_sub_ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f361e93e07b4acda"
            ]
          },
          "dependencies": [
            "module.infra-us-east-1.aws_subnet.public-subnet",
            "module.infra-us-east-1.aws_vpc.main",
            "module.infra-us-east-1.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.infra-us-east-1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423489864:internet-gateway/igw-0c5e62d9e412d8d1a",
            "id": "igw-0c5e62d9e412d8d1a",
            "owner_id": "637423489864",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-03eccb2ff8b01ad78"
          },
          "dependencies": [
            "module.infra-us-east-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-us-east-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423489864:route-table/rtb-0b99f386d33d8c553",
            "id": "rtb-0b99f386d33d8c553",
            "owner_id": "637423489864",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5e62d9e412d8d1a",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5e62d9e412d8d1a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-03eccb2ff8b01ad78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra-us-east-1.aws_internet_gateway.gw",
            "module.infra-us-east-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-us-east-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0681970ed5e8440df",
            "route_table_id": "rtb-0b99f386d33d8c553",
            "subnet_id": "subnet-092b46c3f22182ae0"
          },
          "dependencies": [
            "module.infra-us-east-1.aws_internet_gateway.gw",
            "module.infra-us-east-1.aws_route_table.route_table",
            "module.infra-us-east-1.aws_subnet.public-subnet",
            "module.infra-us-east-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-us-east-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423489864:subnet/subnet-0d2e08d25d84b9fde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2e08d25d84b9fde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423489864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-03eccb2ff8b01ad78"
          },
          "dependencies": [
            "module.infra-us-east-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-us-east-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423489864:subnet/subnet-092b46c3f22182ae0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092b46c3f22182ae0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423489864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-03eccb2ff8b01ad78"
          },
          "dependencies": [
            "module.infra-us-east-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-us-east-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423489864:vpc/vpc-03eccb2ff8b01ad78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06079e8e207c389e7",
            "default_route_table_id": "rtb-054b68fb314913b59",
            "default_security_group_id": "sg-0f361e93e07b4acda",
            "dhcp_options_id": "dopt-076921bc0b35cff78",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03eccb2ff8b01ad78",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054b68fb314913b59",
            "owner_id": "637423489864",
            "tags": {
              "Name": "tera-vpc"
            },
            "tags_all": {
              "Name": "tera-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.infra-us-west-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cb504c1fa44c902e",
            "arn": "arn:aws:ec2:us-west-1:637423489864:instance/i-0b592d9ac20976d84",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b592d9ac20976d84",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bef5ecf4de0a2e5d",
            "private_dns": "ip-10-0-0-103.us-west-1.compute.internal",
            "private_ip": "10.0.0.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-054555e85c7689b67",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f4003b471c17813",
            "tags": {
              "Name": "private_sub_ec2"
            },
            "tags_all": {
              "Name": "private_sub_ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fa2f931d77ae0c40"
            ]
          },
          "dependencies": [
            "module.infra-us-west-1.aws_subnet.private-subnet",
            "module.infra-us-west-1.aws_vpc.main",
            "module.infra-us-west-1.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.infra-us-west-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cb504c1fa44c902e",
            "arn": "arn:aws:ec2:us-west-1:637423489864:instance/i-079717b6e524494e2",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-079717b6e524494e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e434038b58991457",
            "private_dns": "ip-10-0-1-154.us-west-1.compute.internal",
            "private_ip": "10.0.1.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e0a30f000516c88c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04baf270b12144c9d",
            "tags": {
              "Name": "public_sub_ec2"
            },
            "tags_all": {
              "Name": "public_sub_ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fa2f931d77ae0c40"
            ]
          },
          "dependencies": [
            "module.infra-us-west-1.aws_subnet.public-subnet",
            "module.infra-us-west-1.aws_vpc.main",
            "module.infra-us-west-1.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.infra-us-west-1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:637423489864:internet-gateway/igw-081106412260c52c1",
            "id": "igw-081106412260c52c1",
            "owner_id": "637423489864",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0746946a14df73c1e"
          },
          "dependencies": [
            "module.infra-us-west-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-us-west-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:637423489864:route-table/rtb-06c9613dbf33f4137",
            "id": "rtb-06c9613dbf33f4137",
            "owner_id": "637423489864",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081106412260c52c1",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081106412260c52c1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0746946a14df73c1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra-us-west-1.aws_internet_gateway.gw",
            "module.infra-us-west-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-us-west-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2b1f05b0aadadc9",
            "route_table_id": "rtb-06c9613dbf33f4137",
            "subnet_id": "subnet-04baf270b12144c9d"
          },
          "dependencies": [
            "module.infra-us-west-1.aws_internet_gateway.gw",
            "module.infra-us-west-1.aws_route_table.route_table",
            "module.infra-us-west-1.aws_subnet.public-subnet",
            "module.infra-us-west-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-us-west-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:637423489864:subnet/subnet-06f4003b471c17813",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f4003b471c17813",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423489864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0746946a14df73c1e"
          },
          "dependencies": [
            "module.infra-us-west-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-us-west-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:637423489864:subnet/subnet-04baf270b12144c9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04baf270b12144c9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423489864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0746946a14df73c1e"
          },
          "dependencies": [
            "module.infra-us-west-1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.infra-us-west-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:637423489864:vpc/vpc-0746946a14df73c1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b90238f969cb8481",
            "default_route_table_id": "rtb-010d7719e69daad2c",
            "default_security_group_id": "sg-0fa2f931d77ae0c40",
            "dhcp_options_id": "dopt-08e38c99bf7deea69",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0746946a14df73c1e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010d7719e69daad2c",
            "owner_id": "637423489864",
            "tags": {
              "Name": "tera-vpc"
            },
            "tags_all": {
              "Name": "tera-vpc"
            }
          }
        }
      ]
    }
  ]
}